deployment_strategies/canary/canary-v1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: candy-v1
  namespace: canary-ns
  labels:
    app: candy
    version: v1
spec:
  replicas: 4
  selector:
    matchLabels:
      app: candy
      version: v1
  template:
    metadata:
      labels:
        app: candy
        version: v1
    spec:
      containers:
      - name: candy
        image: samirsadek123/k8deploment:v1
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
