deployment_strategies/canary/canary-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: candy-service
  namespace: canary-ns
spec:
  selector:
    app: candy
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
