deployment_strategies/canary/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: candy-ingress
  namespace: canary-ns
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: candy-service
            port:
              number: 80
